--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prediction: The Random Forest Classifier Model will be more accurate because it will remove any noisy parameters from the model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -124,174 +131,128 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Import the data"
+    "# Import the data\n",
+    "file_path = Path('Resources/lending_data.csv')\n",
+    "\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>loan_size</th>\n",
-       "      <th>interest_rate</th>\n",
-       "      <th>borrower_income</th>\n",
-       "      <th>debt_to_income</th>\n",
-       "      <th>num_of_accounts</th>\n",
-       "      <th>derogatory_marks</th>\n",
-       "      <th>total_debt</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>32815</th>\n",
-       "      <td>8200.0</td>\n",
-       "      <td>6.598</td>\n",
-       "      <td>42700</td>\n",
-       "      <td>0.297424</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59572</th>\n",
-       "      <td>10500.0</td>\n",
-       "      <td>7.591</td>\n",
-       "      <td>52000</td>\n",
-       "      <td>0.423077</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>22000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42325</th>\n",
-       "      <td>7600.0</td>\n",
-       "      <td>6.351</td>\n",
-       "      <td>40400</td>\n",
-       "      <td>0.257426</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39070</th>\n",
-       "      <td>9700.0</td>\n",
-       "      <td>7.254</td>\n",
-       "      <td>48900</td>\n",
-       "      <td>0.386503</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>18900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42524</th>\n",
-       "      <td>11800.0</td>\n",
-       "      <td>8.155</td>\n",
-       "      <td>57300</td>\n",
-       "      <td>0.476440</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>27300</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       loan_size  interest_rate  borrower_income  debt_to_income  \\\n",
-       "32815     8200.0          6.598            42700        0.297424   \n",
-       "59572    10500.0          7.591            52000        0.423077   \n",
-       "42325     7600.0          6.351            40400        0.257426   \n",
-       "39070     9700.0          7.254            48900        0.386503   \n",
-       "42524    11800.0          8.155            57300        0.476440   \n",
-       "\n",
-       "       num_of_accounts  derogatory_marks  total_debt  \n",
-       "32815                2                 0       12700  \n",
-       "59572                4                 1       22000  \n",
-       "42325                2                 0       10400  \n",
-       "39070                4                 0       18900  \n",
-       "42524                6                 1       27300  "
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Split the data into X_train, X_test, y_train, y_test"
+    "# Split the data into X_train, X_test, y_train, y_test\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "y = df['loan_status']\n",
+    "X = df.drop('loan_status', axis=1)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = 1)\n",
+    "\n",
+    "scaler = StandardScaler().fit(X_train)\n",
+    "\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9908171687990095"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Score: 0.9942908240473243\n",
+      "Testing Score: 0.9936545604622369\n"
+     ]
     }
    ],
    "source": [
-    "# Train a Logistic Regression model print the model score"
+    "# Creating a Logistic Regression Model\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "classifier = LogisticRegression()\n",
+    "\n",
+    "# Fitting model to the training data\n",
+    "classifier.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Printing Model Score\n",
+    "print(f'Training Score: {classifier.score(X_train_scaled, y_train)}')\n",
+    "print(f'Testing Score: {classifier.score(X_test_scaled, y_test)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9910751134956666"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ericb\\anaconda3\\envs\\PythonData38\\lib\\site-packages\\sklearn\\base.py:443: UserWarning: X has feature names, but SelectFromModel was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Score: 0.9974893382858715\n",
+      "Testing Score: 0.9916941807676434\n"
+     ]
     }
    ],
    "source": [
-    "# Train a Random Forest Classifier model and print the model score"
+    "# Creating a Random Forest Classifier Model\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "clf = RandomForestClassifier(random_state=1, n_estimators = 100).fit(X_train_scaled, y_train)\n",
+    "\n",
+    "from sklearn.feature_selection import SelectFromModel\n",
+    "\n",
+    "sel = SelectFromModel(clf)\n",
+    "sel.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "X_selected_train, X_selected_test, y_train, y_test = train_test_split(sel.transform(X), y, random_state=1)\n",
+    "\n",
+    "scaler = StandardScaler().fit(X_selected_train)\n",
+    "\n",
+    "X_selected_train_scaled = scaler.transform(X_selected_train)\n",
+    "X_selected_test_scaled = scaler.transform(X_selected_test)\n",
+    "\n",
+    "clf.fit(X_selected_train_scaled, y_train)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(f'Training Score: {clf.score(X_selected_train_scaled, y_train)}')\n",
+    "print(f'Testing Score: {clf.score(X_selected_test_scaled, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion: The logistic model ended up being slightly more accurate than the Random Forest Model. This is likely because all parameters added value to the model, and in removing parameters from the Random Forest Model it actually made the model less accurate. Both models were very accurate, however, the logistic model ended up slightly outperforming."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -305,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
